--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   get_it: ^7.7.0
   http: ^1.2.2
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
