add local data source test

--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_it: ^7.7.0
   http: ^1.2.2
   internet_connection_checker: ^1.0.0+1
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
