--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.2.2
   internet_connection_checker: ^1.0.0+1
   shared_preferences: ^2.3.2
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,7 @@ dev_dependencies:
   mockito: ^5.4.4
   mocktail: ^1.0.4
   build_runner: ^2.4.11
+  test: ^1.25.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
